# scalar-sparse-ai

./: .gitignore  APPENDIX.md  README.md  arc_cpu_experiment.py  colab_experiments.py  create_appendix_figure.py  create_summary.py  demo.py  pyproject.toml  run_experiment.sh  test_compression.py  test_edge_cases.py
scalar_sparse_ai/: __init__.py  cli.py  minimal_encoder.py  proof_of_concept.py  scalar_sparse_poc.py  sparse_attention_demo.py  types.ts
